# mxl7lb

./: .gitignore  LICENSE  README.md  analyze-mxl7lb.md  analyze-normal.md  nginx-1.16.0.patch
acceptor/: CMakeLists.txt  acceptor.h  acceptor_handler_tcpsrv.cc  acceptor_handler_udssrv.cc  acceptor_initialize.cc  acceptor_loop.cc  acceptor_recieve_req.cc  acceptor_sendfd.cc  acceptor_setup_tcpsrv.cc  acceptor_setup_udssrv.cc  acceptor_timeout_tcpsrv.cc  acceptor_timeout_udssrv.cc  main.cc
acceptor_cli/: CMakeLists.txt  main.cc
client/: client.go  client_large_resp.go  client_large_resp_server.go
natlibs/: CMakeLists.txt  README.md  nat_libs.hh  nat_shared_memory_base.cc  nat_shared_memory_base.hh  nat_shared_memory_config.cc  nat_shared_memory_config.hh  nat_shared_memory_statistics.cc  nat_shared_memory_statistics.hh
natlibs/doc/uml/: ipc.puml
natlibs/nat_observer/: nat_observer_c++_case_sample.hpp
natlibs/test/: CMakeLists.txt  test_basic.cc  test_def.hh
